test/e2e/fixtures/gzip-minimum/queries.json
[
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "Accept-Encoding": "gzip"
    }
  }
]
